<resources>
    <string name="app_name">Geoff Smash</string>
    <string name="Game_Title_Text">Geoff Smash</string>
    <string name="startGameButton">Start Game</string>
    <string name="Options_Text">Options</string>
    <string name="optionsTitleText">Instructions:</string>
    <string name="optionsInstructions">Protect your A\'s by tapping on them before Challen smashes them. Miss three, and you lose! Try to last as long as you can and get a high score.</string>
    <string name="EnemyHint">Number of Enemies(3-30)</string>
    <string name="EnemyTextHint">Enemy Speed (5-50)</string>
    <string name="ApplyButton">Apply</string>
</resources>
